# thanos-minio-tiering

./: Cargo.toml  flake.nix
src/: config.rs  main.rs  minio.rs
src/features/: delete_empty_blocks.rs  mod.rs
