[package]
name = "thanos-minio-tiering"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "env"] }
color-spantrace = "0.2.1"
dotenvy = "0.15.7"
minio-rsc = { version = "0.2.2", features = ["tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
